# mpc-node

./: Cargo.toml  Makefile  build.rs  intent.rs
clients/nodejs/: main.js  package-lock.json  package.json
proto/: intent.proto
src/: adkg_layer.bkp.rs  adkg_layer_bkp.rs  lib.rs  main.rs  network_layer.rs  network_layer_bkp.rs
src/chain/: mod.rs
src/commands/: mod.rs
src/consensus/: mod.rs
src/dkg/: mod.rs
src/frost/: mod.rs
src/network/: mod.rs
src/protos/: mod.rs
src/signing/: mod.rs
src/types/: bls.rs  dkg.rs  mod.rs  p2p.rs  rpc.rs
troot/: Cargo.toml
troot/src/: main.rs
