[package]
name = "mpc-node"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.55", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bls12_381 = { version = "0.8.0" }
ff = "0.13"
group = "0.13"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

